test/cli/test/owner_references/kyverno-test.yaml
name: pod-probes
policies:
- policy.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: require-pod-probes
  resources:
  - pod-fail
  result: fail
  rule: require-pod-probes
- kind: Deployment
  policy: require-pod-probes
  resources:
  - deployment-skip
  result: skip
  rule: require-pod-probes
- kind: CronJob
  policy: require-pod-probes
  resources:
  - cronjob-skip
  result: skip
  rule: require-pod-probes
